# rust-nft-prototype

./: Cargo.toml  README-Gitpod.md  README-Windows.md  README.md  frontend.26790772.js  frontend.26790772.js.map  frontend.b7db2159.css  frontend.b7db2159.css.map  frontend.f1acdecb.js  frontend.f1acdecb.js.map  index.html  package-lock.json  package.json  tailwind.config.js  test.js
.github/workflows/: deploy.yml  tests.yml
frontend/: App.js  config.js  index.css  index.html  index.js
frontend/components/: Navbar.jsx  Token.jsx  Tokens.jsx
res/: nft_prototype.wasm
src/: internal.rs  lib.rs  metadata.rs  mint.rs
tests-ava/__tests__/: main.ava.ts
