[package]
name = "nft-prototype"
version = "0.1.0"
authors = ["Rares Georgescu"]
# For some reason this all errors out when I put in 2022
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
